[solve] 백준 프린터 큐